# aslim

./: .gitignore  Makefile  README.md  example.asli  example.sl  spec.md
aslim/: aslim.opam  dune-project
aslim/_build/: .db  .digest-db  log
aslim/_build/default/: aslim.dune-package  aslim.install  aslim.opam
aslim/_build/default/lib/: aslim.cma  aslim.cmxa  aslim.cmxs  aslim.ml-gen  epl_lexer.ml  interpreter.ml  parser.ml  parser.mli  parser.mly  stages.ml
aslim/_build/default/lib/.aslim.objs/: aslim__Ast.impl.all-deps  aslim__Epl_lexer.impl.all-deps  aslim__Parser.impl.all-deps  aslim__Stages.impl.all-deps  epl_lexer.ml.d  interpreter.ml.d  parser.ml.d  stages.ml.d
aslim/_build/default/lib/.aslim.objs/byte/: aslim.cmi  aslim.cmo  aslim.cmt  aslim__Ast.cmi  aslim__Ast.cmo  aslim__Ast.cmt  aslim__Epl_lexer.cmi  aslim__Epl_lexer.cmo  aslim__Epl_lexer.cmt  aslim__Interpreter.cmi  aslim__Interpreter.cmo  aslim__Interpreter.cmt  aslim__Parser.cmi  aslim__Parser.cmo  aslim__Parser.cmt  aslim__Parser.cmti  aslim__Stages.cmi  aslim__Stages.cmo  aslim__Stages.cmt
aslim/_build/default/lib/.aslim.objs/native/: aslim.cmx  aslim__Ast.cmx  aslim__Epl_lexer.cmx  aslim__Interpreter.cmx  aslim__Parser.cmx  aslim__Stages.cmx
aslim/_build/default/lib/.merlin-conf/: lib-aslim
aslim/_build/install/default/lib/aslim/: META  dune-package  opam
aslim/lib/: ast.ml  ast.mli  dune  epl_lexer.mll  globals.ml  interpreter.ml  interpreter.mli  parser.mly  stages.ml  stages.mli  utils.ml
aslim/test/: dune
examples/: basic.asli  list_manip.asli  truth_machine.asli
