(lang dune 3.3)

(name aslim)

(generate_opam_files true)

(source
 (github elfahor/aslim))

(authors "Elfahor")

(maintainers "Elfahor")

(license GPL3)

(documentation https://url/to/documentation)

(package
 (name aslim)
 (synopsis "A shitty language I made")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
