(lang dune 3.3)

(name aslim)

(generate_opam_files true)

(source
 (github elfahor/aslim))

(authors "Elfahor")

(maintainers "Elfahor")

(license GPL3)

(using menhir 2.1)

(documentation https://url/to/documentation)

(package
 (name aslim)
 (synopsis "A Shitty Language I Made")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (programming-languages)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
